--- a/serve/src/main/resources/application.properties
+++ b/serve/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
 
+# Database
+spring.datasource.url=jdbc:mysql://mysql:3306/sql2charts?serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
