--- a/serve/pom.xml
+++ b/serve/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.5.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
