--- a/serve/src/main/resources/application.properties
+++ b/serve/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.url=jdbc:mysql://mysql:3306/sql2charts?serverTimezone=Asia/Sha
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
