--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "axios": "^1.5.1",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.4.2"
+    "react-grid-layout": "^1.4.2",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
